# habr-jobs

./: README.md  pyproject.toml  test.txt
src/: index.py
src/html/: html_parser.py
src/interface/: parsing_data.py  request_data.py
src/requests/: my_get.py
src/tools/: config.py  data_prettier.py
tests/: test_html_parser.py  test_my_get.py
