[tool.poetry]
name = "habr-jobs"
version = "0.1.0"
description = ""
authors = ["Vebnik(Nik) <vebnik111@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.scripts]
get_jobs = "src.index:main"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
pytest = "^7.2.0"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
